--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <li>Airspace Equipment</li>
   </ul>
     <h2> Our service</h2>
-  Make your choice please. We love to server you as better as we can.
+  Make your choice please. We love to serve you as better as we can.
   </body>
 </html>
