Testing a DynRem code.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     </div>
   </noscript>
   <!-- //Rating Mail.ru counter -->
+  <!-- Rating@Mail.ru counter dynamic remarketing appendix -->
+  <script type="text/javascript">
+  var _tmr = _tmr || [];
+  _tmr.push({
+      type: 'itemView',
+      productid: 'VALUE',
+      pagetype: 'VALUE',
+      list: 'VALUE',
+      totalvalue: 'VALUE'
+  });
+  </script>
+<!-- // Rating@Mail.ru counter dynamic remarketing appendix -->
     <h1>Testing MRG Ad ecosystem for internal education</h1>
     <h2>Our products</h2>
     <p>We sell any products and deliver them to any location be it a city or a village without any delay:</p>
