Dynrem parameters are assigned.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   var _tmr = _tmr || [];
   _tmr.push({
       type: 'itemView',
-      productid: 'VALUE',
-      pagetype: 'VALUE',
-      list: 'VALUE',
-      totalvalue: 'VALUE'
+      productid: '4240',
+      pagetype: 'cart',
+      list: '1',
+      totalvalue: '10.00'
   });
   </script>
 <!-- // Rating@Mail.ru counter dynamic remarketing appendix -->
